--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@iconify-icons/logos": "^1.2.36",
+    "@iconify/react": "^6.0.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
   },
