feat: add environment variable configuration
- Added .env files for server, client, and ML directories
- Updated Spring Boot application.properties to use env vars with defaults
- Updated ML training and prediction scripts to use env vars
- Added python-dotenv dependency for ML
- Updated .gitignore to allow .env files for configuration

--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,11 @@ client/npm-debug.log*
 client/yarn-debug.log*
 client/yarn-error.log*
 
+# Allow .env files for configuration
+!client/.env
+!server/.env
+!ML/.env
+
 # Java / Maven (server)
 server/target/
 server/.classpath
