--- a/.gitignore
+++ b/.gitignore
@@ -43,11 +43,72 @@ ML/*.pyc
 ML/.venv/
 ML/venv/
 ML/.env
-ML/training_history.png
-ML/mushroom_cnn_model.pth
 
-# Data (keep directory, ignore files)
-ML/data/**/*
+# ---- data ----
+ML/data/processed/
+ML/data/raw/
+ML/data/
+
+# ---- images ----
+*.jpg
+*.jpeg
+*.png
+*.gif
+*.bmp
+*.tiff
+*.webp
+ML/images/
+client/public/images/
+server/src/main/resources/images/
+
+# ---- models ----
+*.pth
+*.pt
+*.h5
+*.pb
+*.pkl
+*.joblib
+ML/models/
+ML/*.pth
+ML/*.pt
+ML/*.h5
+ML/*.pb
+ML/*.pkl
+ML/*.joblib
+
+# ---- training outputs ----
+ML/checkpoints/
+ML/logs/
+ML/runs/
+ML/wandb/
+ML/tensorboard/
+ML/lightning_logs/
+
+# ---- Jupyter notebooks ----
+*.ipynb
+.ipynb_checkpoints/
+
+# ---- Python cache ----
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
 
 # Logs
 logs/
